; ModuleID = '/home/carl/AnghaBench/jq/src/extr_locfile.c_locfile_line_length.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_locfile.c_locfile_line_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.locfile = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.locfile*, i32)* @locfile_line_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @locfile_line_length(%struct.locfile* %0, i32 %1) #0 {
  %3 = alloca %struct.locfile*, align 8
  %4 = alloca i32, align 4
  store %struct.locfile* %0, %struct.locfile** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.locfile*, %struct.locfile** %3, align 8
  %7 = getelementptr inbounds %struct.locfile, %struct.locfile* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.locfile*, %struct.locfile** %3, align 8
  %13 = getelementptr inbounds %struct.locfile, %struct.locfile* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %14, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.locfile*, %struct.locfile** %3, align 8
  %21 = getelementptr inbounds %struct.locfile, %struct.locfile* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = sub nsw i32 %19, %26
  %28 = sub nsw i32 %27, 1
  ret i32 %28
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
